mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes the database server
  labels:
    template: nodejs-mongo-persistent
  name: mongodb
spec:
  ports:
  - name: mongodb
    port: 27017
    targetPort: 27017
  selector:
    name: mongodb
